turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a=Color.black){
       ^LangtonsAnt:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a=Color.white){
       ^LangtonsAnt:17: error: not found: value baisserBrosse
  baisserBrosse()
  ^LangtonsAnt:18: error: not found: value leverBrosse
  leverBrosse()
  ^